--- a/qml.qrc
+++ b/qml.qrc
@@ -35,5 +35,6 @@
         <file>qml/database/database.xml</file>
         <file>qml/fonts/vivaldi.ttf</file>
         <file>qml/HealingHeart.qml</file>
+        <file>qml/ManaTransferImage.qml</file>
     </qresource>
 </RCC>
